--- a/packages/ui/src/assets/scss/layers/header/drawer.scss
+++ b/packages/ui/src/assets/scss/layers/header/drawer.scss
@@ -13,7 +13,7 @@
   background-color: var(--#{$prefix}lighter-black);
   color: #FFF;
   font-size: var(--#{$prefix}font-size-sm);
-  z-index: 1055;
+  z-index: 1035;
   transition:
     width .3s ease-in-out,
     transform .3s ease-in-out;
