--- a/packages/ui/src/assets/scss/main.scss
+++ b/packages/ui/src/assets/scss/main.scss
@@ -232,23 +232,14 @@ body {
     }
 
     > header {
-      position: fixed;
-      left: 0;
-      right: 0;
-      top: 0;
-      z-index: 1;
-
+      grid-area: header;
+      height: 36px + 2 * 16;
     }
 
     > .drawer-placeholder {
       display: none;
       grid-area: drawer;
       width: 72px;
-    }
-
-    > .header-placeholder {
-      grid-area: header;
-      height: 36px + 2 * 16;
     }
 
     > .alert {
@@ -269,7 +260,6 @@ body {
     }
 
     > footer {
-      margin-top: 32px;
       grid-area: footer;
     }
 
@@ -280,10 +270,6 @@ body {
 
       > main {
         row-gap: 70px;
-      }
-
-      > footer {
-        margin-top: unset;
       }
     }
   }
